fixing spacing for header and menu button

--- a/my-react-website/src/style/Fonts.css
+++ b/my-react-website/src/style/Fonts.css
@@ -8,8 +8,8 @@
 
 #title {
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 600;
+    font-size: calc(12px + 3vw);
+    /* max font size */
 }
 
 #headerTitle {
