--- a/my-react-website/src/style/Layout.css
+++ b/my-react-website/src/style/Layout.css
@@ -5,7 +5,7 @@
     align-items: center;
     position: fixed;
     top: 0;
-    height: 5rem;
+    height: fit-content;
     width: 100vw;
     background-color: rgba(255, 255, 255, 0);
     z-index: 4;
@@ -13,13 +13,16 @@
 
 
 .title {
-    margin-left: 10px;
-    margin-right: 30px;
+    margin-left: 1%;
+
 }
 
+
+
+
+
 .MenuButton {
-    margin-left: 30px;
-    margin-right: 10px;
+    margin-right: 2%;
     height: 50px;
     width: 50px;
     display: flex;
